# unifi-tool

./: BUILD.bazel  README.md  WORKSPACE  go_repositories.bzl
cmd/unifi/: BUILD.bazel  force_provision.go  list_devices.go  net.go  sites.go  unifi.go
lib/unifi/: BUILD.bazel  controller.go
