load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "unifi_lib",
    srcs = [
        "force_provision.go",
        "net.go",
        "sites.go",
        "unifi.go",
    ],
    importpath = "github.com/simmonmt/unifi_tool/cmd/unifi",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/unifi",
        "@com_github_google_subcommands//:subcommands",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "unifi",
    embed = [":unifi_lib"],
    visibility = ["//visibility:public"],
)
